-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
Qt Creator 4.7.0
-
None
-
b34a8130b (master)
When the list of devices in many, and the names are not descriptive, there is no way to tell which device should be (or is selected) See screenshot. All the "Devices" comboboxes (B&R, Devices) should show the status (red, green, yellow circle) as in Preferences > Devices
Like:
-----------------
O iPhone23
O iPhone24
...
-----------------
Where O is the appropriate colored circle indicating status.
| For Gerrit Dashboard: QTCREATORBUG-20941 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 532045,2 | ProjectExplorer: Show device status when displaying lists of devices | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |