ProjectExplorer: Show device status when displaying lists of devices

Fixes: QTCREATORBUG-20941
Change-Id: Ibc24785ae2afc174d13c22231f2c8e7e6923d64c
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>